stop sidebar wrapping / unwrapping

--- a/ui/src/app/cohort-review/cohort-review/cohort-review.component.css
+++ b/ui/src/app/cohort-review/cohort-review/cohort-review.component.css
@@ -21,3 +21,7 @@
 [appSidebar] .closebtn:hover {
   color: rgb(166, 166, 166);
 }
+
+[appSidebar] > * {
+  white-space: nowrap;
+}
